1. Метод .of [#70623] fix2